fixed responsive layout for the about us section on mobile landscape mode

--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -109,16 +109,32 @@
   }
   
   .about {
-    flex-direction: column;
-    text-align: center;
+    flex-direction: row;
+    justify-content: flex-end;
+    text-align: left;
     height: auto;
-    padding: 5rem 0;
+    padding: 5rem;
   }
-  
+
   .about__content {
-    max-width: 90%;
-    padding: 0 3rem;
+    max-width: 50%;
+    padding: 2rem;
+    margin-left: 0; 
+    text-align: left;
   }
+
+  /* .about {
+    flex-direction: row;
+    text-align: center;
+    justify-content: flex-end;
+    padding: 3rem 2rem;
+  } */
+
+  /* .about__content {
+    max-width: 90%;
+    padding: 0 5rem;
+    margin-left: 0;
+  } */
   
   .about__title {
     font-size: 4.5rem;
@@ -191,11 +207,25 @@
   .testimonials__title {
     font-size: 4rem;
   }
-  
+
   .hero__social {
     gap: 2rem;
   }
   
+  .about {
+    flex-direction: row;
+    text-align: center;
+    justify-content: flex-end;
+    padding: 3rem 2rem;
+  }
+  
+  .about__content {
+    max-width: 50%;
+    padding: 2rem;
+    margin-left: 0; 
+    text-align: left;
+  }
+
   .specialties__gallery {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
